--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "data_dir = \"\" \n",
+    "data_dir = \"/home/work/tkoike/dna-encoder-under-bioconstraints_tcbb2025\" \n",
     "save_dir = \"\"\n",
     "models = [\"vgg16\", \"resnet50\", \"xception\", \"efficientnetv2s\"]"
    ]
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -65,10 +65,10 @@
      "output_type": "stream",
      "text": [
       "                cnn_model   primo proposed (only triplet)      proposed\n",
-      "vgg16               0.854   0.862                   0.862  0.864+-0.001\n",
-      "resnet50           0.9274  0.9324                  0.9324  0.932+-0.001\n",
-      "xception           0.7834  0.7939                  0.7939  0.793+-0.001\n",
-      "efficientnetv2s    0.9474  0.9485                  0.9485  0.948+-0.001\n"
+      "vgg16               0.854  0.8632                   0.862  0.864+-0.001\n",
+      "resnet50           0.9274  0.9312                  0.9324  0.932+-0.001\n",
+      "xception           0.7834  0.7898                  0.7939  0.793+-0.001\n",
+      "efficientnetv2s    0.9474  0.9486                  0.9485  0.948+-0.001\n"
      ]
     }
    ],
@@ -95,7 +95,6 @@
     "            data=pd.read_hdf(f\"{data_dir}/{dataset}/simulation/{model}/{file}\")\n",
     "            acc, _, _ = accuracy(data)\n",
     "            hp_loss_data.append(acc)\n",
-    "        accuracy_data.loc[model, \"primo\"] = acc\n",
     "    accuracy_data.loc[model, \"proposed\"] = f\"{np.mean(hp_loss_data):.3f}+-{np.std(hp_loss_data):.3f}\"\n",
     "\n",
     "print(accuracy_data)"
@@ -110,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -118,10 +117,10 @@
      "output_type": "stream",
      "text": [
       "                cnn_model   primo proposed (only triplet)      proposed\n",
-      "vgg16              0.6305  0.6722                  0.6722  0.659+-0.005\n",
-      "resnet50           0.7115  0.7281                  0.7281  0.724+-0.002\n",
-      "xception           0.7489  0.7542                  0.7542  0.754+-0.001\n",
-      "efficientnetv2s     0.814  0.8129                  0.8129  0.802+-0.004\n"
+      "vgg16              0.6305  0.4376                  0.6722  0.659+-0.005\n",
+      "resnet50           0.7115  0.5358                  0.7281  0.724+-0.002\n",
+      "xception           0.7489  0.6798                  0.7542  0.754+-0.001\n",
+      "efficientnetv2s     0.814  0.7609                  0.8129  0.802+-0.004\n"
      ]
     }
    ],
@@ -148,7 +147,6 @@
     "            data=pd.read_hdf(f\"{data_dir}/{dataset}/simulation/{model}/{file}\")\n",
     "            acc, _, _ = accuracy(data)\n",
     "            hp_loss_data.append(acc)\n",
-    "        accuracy_data.loc[model, \"primo\"] = acc\n",
     "    accuracy_data.loc[model, \"proposed\"] = f\"{np.mean(hp_loss_data):.3f}+-{np.std(hp_loss_data):.3f}\"\n",
     "\n",
     "print(accuracy_data)"
